css/style.scss
/* ... */
/*
>>================================================================================>
Primary Content
>>================================================================================>
*/

#primary-content > div {
    position: relative;
}

#primary-content > div:before {
    content:'/';
    position: absolute;
    font-weight: 800;
}

#primary-content h2 {
    font-weight: 700;
    margin: 0;
}

/* Form */

#form * {
    font-family: 'Source Code Pro', monospace;
    font-weight: 600;
}

/* Input Group */

#form .input-group label {
    text-transform: uppercase;
    letter-spacing: .02em;
}

#form .input-group .inputs {
    display: flex;
    border-bottom: 2px solid #000;
    flex-grow:1;
    height: 31px;
    transition: opacity 300ms linear;
}

#form.error .input-group .inputs {
    border-color:#e040fb;
}

#form .input-group .inputs ::-webkit-input-placeholder {
    color: #868686;
}

#form .input-group .inputs ::-moz-placeholder {
    color: #868686;
}

#form .input-group .inputs :-ms-input-placeholder {
    color: #868686;
}

#form .input-group .inputs :-moz-placeholder {
    color: #868686;
}

#form .input-group .inputs #email-field.error::-webkit-input-placeholder {
    color: #e040fb;
}

#form .input-group .inputs #email-field.error::-moz-placeholder {
    color: #e040fb;
}

#form .input-group .inputs #email-field.error:-ms-input-placeholder {
    color: #e040fb;
}

#form .input-group .inputs #email-field.error:-moz-placeholder {
    color: #e040fb;
}

#email-field {
    font-size: 12px;
    letter-spacing: .07em;
    height: 27px;
    flex-grow:1;
}

#form.error #email-field,
#form.error #email-field:-webkit-autofill {
    color:#e040fb !important;
}

#form.error input:-webkit-autofill,
#form.error input:-webkit-autofill:hover, 
#form.error input:-webkit-autofill:focus
#form.error input:-webkit-autofill {
    -webkit-text-fill-color: #e040fb;
    border: 1px solid transparent;
    -webkit-box-shadow: 0 0 0px 1000px transparent inset;
    transition: background-color 5000s ease-in-out 0s;
}

input:-webkit-autofill,
input:-webkit-autofill:hover, 
input:-webkit-autofill:focus
input:-webkit-autofill {
    border: 1px solid transparent;
    -webkit-box-shadow: 0 0 0px 1000px transparent inset;
    transition: background-color 5000s ease-in-out 0s;
}

#form .submit {
    width: 30px;
    height: 27px;
    position: relative;
}

#form .submit .arrow {
    position: absolute;
    top: 5px;
    right: 0;
    transition: right 300ms ease, opacity 300ms ease, visibility 300ms ease;
}

.no-touchevents #form:not(.sending) .submit:hover .arrow {
    right: 20px;
}

.no-touchevents #form:not(.sending) .submit:hover .arrow path {
    fill:#3beef9;
}

#form.sending .input-group .inputs {
    opacity: .3;
    transition: none;
}

/* Form Bottom */

#form-bottom {
    font-size: 12px;
    position: relative;
}

#form .checkbox {
    display: block;
    transition: opacity 300ms ease, visibility 300ms ease;
}

#form .checkbox:before,
#form .checkbox:after {
    content: " ";
    display: table;
}

#form .checkbox:after {
    clear: both;
}

#form .checkbox .indicator {
    position: relative;
    width: 18px;
    height: 18px;
    border: 1px solid #000;
    display: inline-block;
    vertical-align: middle;
    float: left;
}

#form .checkbox.error .indicator {
    border-color:#e040fb;
}

#form .checkbox .indicator:after {
    content:'';
    position: absolute;
    width: 7px;
    height: 7px;
    background-color:transparent;
    top: 50%;
    left: 50%;
    transform: translate(-50%,-50%);
    transition: background-color 100ms linear;
}

#form .checkbox.active .indicator:after {
    background-color:#000;
}

#form .checkbox .message {
    text-align: left;
    display: block;
    line-height: 1.6em;
    letter-spacing: .08em;
}

#form .checkbox.error .message {
    color:#e040fb;
}

#thanks {
    position: absolute;
    top: -1px;
    letter-spacing: .08em;
    line-height: 1.6em;
    visibility: hidden;
    opacity: 0;
    transition: opacity 300ms ease, visibility 300ms ease;
}

#form.success #thanks {
    opacity: 1;
    visibility: visible;
}

#form.success .checkbox {
    opacity: 0;
    visibility: hidden;
}

/*
Desktop
>>---------->
*/

@media screen and (min-width: 1024px) {
    #primary-content {
        width: 700px;
    }

    #primary-content h2 {
        font-size:72px;
        line-height: 1.2em;
        letter-spacing: .025em;
    }
}

@media screen and (max-width: 1023px) and (min-width: 768px) {
    #primary-content {
        width: 500px;
    }

    #primary-content h2 {
        font-size: 50px;
        line-height: 1.2em;
        letter-spacing: .025em;
    }
}

@media screen and (min-width: 768px) {
    #primary-content {
        position: absolute;
        left: 50%;
        top: 50%;
        transform: translate(-50%,-50%);
        margin-top: -28px;
    }

    #primary-content > div:after {
        content:'/';
        position: absolute;
        font-weight: 800;
    }

    #primary-content > div:before,
    #primary-content > div:after {
        content:'/';
        position: absolute;
        font-size: 70px;
        font-weight: 800;
    }

    #primary-content > div:before {
        top: -30px;
        left: -60px;
    }

    #primary-content > div:after {
        bottom: -5px;
        right: -50px;
    }

    /* Form */

    #form {
        margin-top: 50px;
    }

    /* Input Group */

    #form .input-group {
        display: flex;
        padding-right: 20px;
        margin-bottom: 25px;
    }

    #form .input-group .inputs {
        margin-top: -14px;
        margin-left: 7px;
    }
    
    #form .input-group label {
        font-size: 18px;
    }

    /* Form Bottom */

    #form-bottom {
        margin-bottom: 50px;
    }

    #form .checkbox .message {
        margin-top: -1px;
        margin-left: 26px;
    }
}
/* ... */

